<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/selectclient"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/select_client_screen"
    tools:context="com.ibm.cio.gss.isap_lite.activity.LoginActivity"
    >


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/client_header_text"
        android:gravity="center_horizontal"
        android:textSize="32sp"
        android:paddingTop="35dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:textStyle="normal"
        android:text="@string/select_client_header_content"
         />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/client_header_text"
        android:gravity="center_horizontal"
        android:textSize="32sp"
        android:textStyle="normal"
        android:text="@string/select_client_header_content_1"



        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/qoute_auther"
        android:gravity="center_horizontal"
        android:textSize="12sp"
        android:textColor="@color/client_text_auther"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/client_middle_text"
        android:gravity="center_horizontal"
        android:textSize="18sp"
        android:paddingTop="10dp"
        android:text="@string/select_client_middle_content"

        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/client_middle_text"
        android:gravity="center_horizontal"
        android:textSize="18sp"
        android:text="@string/select_client_middle_content1"

        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/client_middle_text"
        android:gravity="center_horizontal"
        android:textSize="18sp"
        android:text="@string/select_client_middle_content2"

        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/client_middle_text"
        android:gravity="center_horizontal"
        android:textSize="18sp"
        android:text="@string/select_client_middle_content3"

        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        >


        <Button
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="bottom"
            android:id="@+id/select_client"
            android:text="@string/select_client_text"
            android:textSize="16sp"
            android:background="@color/select_client_bg" />

    </LinearLayout>


</LinearLayout>