<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_bgimage"
    android:gravity="center_horizontal"
    tools:context="com.ibm.cio.gss.isap_lite.activity.LoginActivity">


    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusableInTouchMode="true"
            android:orientation="vertical"
            android:paddingTop="@dimen/activity_vertical_margin">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"

                >

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="160dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="0dp"
                    android:padding="3dp"
                    android:src="@drawable/isap_logo" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height=".1dp"
                    android:layout_marginBottom="15dp"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
                    android:layout_marginRight="@dimen/activity_horizontal_margin"
                    android:background="@color/colorLogin" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"


                >

                <view
                    class="com.ibm.cio.gss.isap_lite.stylekitIcons.user_icon"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginTop="5dp"

                    />

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="@dimen/activity_horizontal_margin"
                    android:paddingRight="@dimen/activity_horizontal_margin"
                    android:textColorHint="@color/colorLogin">


                    <EditText
                        android:id="@+id/email"
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:layout_marginBottom="10dp"
                        android:layout_marginTop="20dp"
                        android:background="@android:color/transparent"
                        android:drawablePadding="10dp"
                        android:ems="10"
                        android:hint="@string/prompt_email"
                        android:inputType="textEmailAddress"
                        android:maxLines="1"
                        android:padding="8dp"
                        android:text=""
                        android:textSize="16sp"
                        app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout" />
                </android.support.design.widget.TextInputLayout>


            </LinearLayout>


            <View
                android:layout_width="match_parent"
                android:layout_height=".1dp"
                android:layout_marginBottom="15dp"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:background="@color/colorLogin" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin">

                <view
                    class="com.ibm.cio.gss.isap_lite.stylekitIcons.Lock_icon"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginTop="5dp" />

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/passwordWrapper"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="@dimen/activity_horizontal_margin"
                    android:paddingRight="@dimen/activity_horizontal_margin"
                    android:textColorHint="@color/colorLogin">


                    <EditText
                        android:id="@+id/password"
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:layout_marginBottom="5dp"
                        android:layout_marginTop="10dp"
                        android:background="@android:color/transparent"
                        android:drawablePadding="10dp"
                        android:ems="10"
                        android:hint="@string/prompt_password"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:padding="8dp"
                        android:text=""
                        android:textSize="16sp"
                        app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout" />
                </android.support.design.widget.TextInputLayout>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height=".1dp"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:background="@color/colorLogin" />

            <Button
                android:id="@+id/btnLogin"
                style="@android:style/Widget.Material.Button.Borderless.Colored"
                android:layout_width="match_parent"
                android:layout_height="65dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/myloginbtn"
                android:text="@string/action_sign_in"
                android:textColor="#ffff"
                android:textSize="20sp"
                android:textStyle="bold"

                />

            <TextView
                android:id="@+id/txt_verision_no2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@+id/rl_bottom"
                android:layout_gravity="center_horizontal"
                android:text="Version"
                android:textColor="@android:color/white"
                android:textSize="14sp"
                android:visibility="gone"
                android:layout_centerInParent="true"
                android:layout_marginBottom="2dp"/>
            <view
                android:id="@+id/TouchIdImage"
                class="com.ibm.cio.gss.isap_lite.stylekitIcons.touch_id"
                layout_width="match_parent"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_gravity="center_horizontal"
                android:onClick="touchAuth" />

            <TextView
                android:id="@+id/TouchIdLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="5dp"
                android:text="@string/action_touchId"
                android:textSize="20sp" />


        </LinearLayout>


    </ScrollView>
    <TextView
        android:id="@+id/txt_verision_no1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/rl_bottom"
        android:layout_gravity="center_horizontal"
        android:text="Version"
        android:textColor="@android:color/white"
        android:textSize="14sp"
        android:layout_centerInParent="true"
        android:layout_marginBottom="2dp"/>

    <RelativeLayout
        android:id="@+id/rl_bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">



        <Button
            android:id="@+id/registerTouchId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/register_toichid"
            android:padding="20dp"
            android:text="@string/register_touchId"
            android:textAllCaps="false"
            android:textColor="@color/colorLogin"
            android:textSize="23sp"

            />

    </RelativeLayout>

</RelativeLayout>
